<resources>
    <string name="app_name" translatable="false">VASIR</string>
    <string name="dialog_version_info_subtitle" translatable="false">Release 03/2025\n© 2025 Petr Krýže</string>
    <string name="feedback_email_address" translatable="false">kryzepet@fel.cvut.cz</string>
    <string name="feedback_email_subject" translatable="false">VASIR App Feedback</string>
    <string name="DIRECTORY_NAME_RESULTS" translatable="false">Results</string>
    <string name="DIRECTORY_NAME_TEMP" translatable="false">temp</string>
    <string name="RATING_FILE_NAME" translatable="false">
        RATING_%d_%s.txt
    </string>
    <string name="RATING_EXCEL_FILE_NAME" translatable="false">
        RATING_%d_%s.xlsx
    </string>
    <string name="excel_title_label" translatable="false">VASIR - Visual Analog Scale Intelligibility Rating</string>
    <string name="SETTING_KEY_SHOW_WELCOME_SCREEN" translatable="false">setting_show_welcome_screen</string>
    <string name="SETTING_KEY_BACKUPS_NUMBER" translatable="false">setting_number_of_backups</string>
    <string name="SETTING_KEY_REQUIRE_HEADPHONES" translatable="false">setting_require_headphones</string>
    <string name="SETTING_KEY_VERSION_INFO" translatable="false">setting_version_info</string>
    <string name="SETTING_KEY_FEEDBACK" translatable="false">setting_feedback</string>
    <string name="SETTING_KEY_RATING_TITLE_LABEL" translatable="false">setting_rating_title_label</string>
    <string name="SETTING_KEY_RATING_LOWEST_LABEL" translatable="false">setting_rating_lowest_label</string>
    <string name="SETTING_KEY_RATING_HIGHEST_LABEL" translatable="false">setting_rating_highest_label</string>
    <string name="placeholder" translatable="false">placeholder</string>
    <string name="placeholder_number" translatable="false">##</string>
    <string name="result_detail_save_date_placeholder" translatable="false">Save date placeholder</string>
    <string name="result_detail_seed_placeholder" translatable="false">Seed placeholder</string>
    <string name="result_detail_generator_date_placeholder" translatable="false">Generator date placeholder</string>
    <string name="result_detail_recording_list_row_id_placeholder" translatable="false">ID</string>
    <string name="result_detail_recording_list_row_group_placeholder" translatable="false">group</string>
    <string name="result_detail_recording_list_row_index_placeholder" translatable="false">index</string>
    <string name="result_detail_recording_list_row_rating_placeholder" translatable="false">rating</string>
    <string name="track_time_placeholder" translatable="false">00:00</string>
    <string name="current_session_info_rated_fraction_placeholder" translatable="false">0/0</string>
    <string name="group_control_group_folder_list_row_group_name_input_placeholder" translatable="false">Group name placeholder</string>
    <string name="group_control_group_folder_list_row_folder_name_placeholder" translatable="false">Folder name placeholder</string>
    <string name="dialog_version_info_text1_placeholder" translatable="false">Version Number</string>
    <string name="dialog_version_info_text2_placeholder" translatable="false">Version Info</string>
    <string name="help_header_placeholder" translatable="false">Help</string>
    <string name="help_message2_placeholder" translatable="false">Help message 2</string>
    <string name="track_counter" translatable="false">%s: %s</string>
    <string name="group_control_group_folder_list_row_folder_name" translatable="false">/%s</string>
    <string name="help_tag_description_row_number" translatable="false">%d.</string>
    <string name="fragment_header_welcome" translatable="false">@string/app_name</string>
    <string name="fragment_header_rating">Rating</string>
    <string name="fragment_header_help">Help</string>
    <string name="fragment_header_current_session_info">Current Session</string>
    <string name="fragment_header_saved_ratings">Saved Ratings</string>
    <string name="fragment_header_rating_detail">Rating Detail</string>
    <string name="fragment_header_group_control_fragment">Group Control</string>
    <string name="fragment_header_settings_fragment">Settings</string>
    <string name="action_quit">Quit</string>
    <string name="action_new_session">Create a New Session</string>
    <string name="action_new_session_condensed">New Session</string>
    <string name="action_help">Help</string>
    <string name="action_show_session_info">Session Info</string>
    <string name="action_show_saved_results">Saved Ratings</string>
    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="button_pause_label">Pause</string>
    <string name="button_play_label">Play</string>
    <string name="button_next_label">Next</string>
    <string name="button_previous_label">Previous</string>
    <string name="button_share_label">Share</string>
    <string name="button_share_all_label">Share all</string>
    <string name="button_confirm_label">Confirm</string>
    <string name="button_share_as_text_label">Share as plain text</string>
    <string name="button_share_as_excel_label">Share as excel file</string>
    <string name="dialog_make_new_session_title">Leave current session?</string>
    <string name="dialog_make_new_session_message">Do you want to discard unsaved ratings in this session and create a new rating session?</string>
    <string name="dialog_make_new_session_positive_button_label">Yes</string>
    <string name="dialog_invalid_directory_title">Invalid directory</string>
    <string name="dialog_invalid_directory_not_exist">Directory &lt;i>%s&lt;/i> does not exist.</string>
    <string name="dialog_invalid_directory_not_directory">Selection &lt;i>%s&lt;/i> is not a directory.</string>
    <string name="dialog_invalid_directory_not_readable">Directory &lt;i>%s&lt;/i> is not readable.</string>
    <string name="dialog_invalid_directory_no_files">No usable audio files were found in the &lt;i>%s&lt;/i> directory.</string>
    <string name="dialog_invalid_directory_missing_files">The loaded session is missing the following files (total %1$d) in the directory %2$s:\n%3$s</string>
    <string name="dialog_invalid_directory_choose_valid_data_directory">Choose valid data directory</string>
    <string name="dialog_invalid_directory_cancel">Back</string>
    <string name="dialog_internal_error_title">Internal error</string>
    <string name="dialog_internal_error_message">Error message: Extracting full path from document selection URI failed!</string>
    <string name="dialog_internal_error_return">Return</string>
    <string name="dialog_no_session_found_title">No session found</string>
    <string name="dialog_no_session_found_message">No previous rating session was found. Please create a new session.</string>
    <string name="dialog_no_session_corrupted_session_quit">Quit</string>
    <string name="dialog_no_session_corrupted_session_create_new_session">Create new session</string>
    <string name="dialog_corrupted_session_title">Corrupted session</string>
    <string name="dialog_corrupted_session_message">Previous session is corrupted. Please create a new session.</string>
    <string name="dialog_delete_result_title">Delete selected result?</string>
    <string name="dialog_delete_result_message">Are you sure you want to delete the selected result from the device? This operation is irreversible.</string>
    <string name="dialog_delete_result_confirm">Yes, delete</string>
    <string name="dialog_delete_result_cancel">No</string>
    <string name="dialog_save_failed_continue_title">Saving failed!</string>
    <string name="setting_show_welcome_screen_title">Show welcome screen</string>
    <string name="setting_show_welcome_screen_summary_on">App will show the welcome screen on startup</string>
    <string name="setting_show_welcome_screen_summary_off">App will show the rating screen on startup</string>
    <string name="setting_number_of_backups_title">Number of backup result save files</string>
    <string name="setting_feedback_title">Send feedback</string>
    <string name="setting_feedback_summary">Report technical issues or suggest new features</string>
    <string name="setting_version_info_title">Show version information</string>
    <string name="setting_version_info_summary">Current version: %s</string>
    <string name="setting_category_rating_labels">Rating labels</string>
    <string name="setting_category_rating_labels_summary">Input an empty string to return to defaults.</string>
    <string name="setting_rating_title_label_title">Rating title label</string>
    <string name="setting_rating_lowest_label_title">Lowest rating label</string>
    <string name="setting_rating_highest_label_title">Highest rating label</string>
    <string name="welcome_title">Welcome!</string>
    <string name="welcome_message1">
        <b>VASIR</b> is an application that utilizes a <i>visual analog scale</i> for subjective speech intelligibility rating.
    </string>
    <string name="welcome_message2">
        To find out more info about how to use this app, scroll down on this screen for a quick reference.\n
        Every screen in the app has a contextual help that can be displayed using the dropdown menu in the top-right corner.
    </string>
    <string name="welcome_scroll_hint_description">Down facing arrow suggesting scrolling</string>
    <string name="welcome_message_further_info_header">Quick reference</string>
    <string name="welcome_message_further_info">
        \tAfter proceeding, you will be asked to select a directory containing the audio files of speech recordings to be rated.
        The location of the files is arbitrary, but we <i>recommend</i> saving them to a standard directory
        on your phone\'s internal storage (e.g. the <i>Documents</i> folder).\n\n
        \tAfterwards, the app performs a randomization on the found audio files and prepares them for rating. You can browse through
        the available files using the built-in player, listen to their content through headphones,
        and finally, rate them on the scale located to the bottom of the rating screen.
        When all available files have been rated, a double checkmark icon will appear.
        The current session is saved automatically on app exit, but can be also saved manually using the dropdown menu in the top-right corner.
        This menu also allows you to see the saved recordings and share them via cloud, email, etc.
        \n\n
        This application was developed for use in research and development at the department of circuit theory, faculty of electrotechnics, CTU in Prague.\n
    </string>
    <string name="welcome_checkbox_do_not_show_again">Do not show this screen again</string>
    <string name="welcome_button_continue_label">Continue to rating</string>
    <string name="welcome_title_image_desc">VASIR application logo, icons of a person speaking to an ear</string>
    <string name="rating_title_label_default">Intelligibility</string>
    <string name="rating_highest_label_default">Perfectly intelligible</string>
    <string name="rating_lowest_label_default">Completely unintelligible</string>
    <string name="result_detail_sessionID">Session %d</string>
    <string name="result_detail_seed_label">Seed:</string>
    <string name="result_detail_generator_date_label">Session created:</string>
    <string name="result_detail_recording_list_column_id_label">ID</string>
    <string name="result_detail_recording_list_column_group_label">Group</string>
    <string name="result_detail_recording_list_column_index_label">Index</string>
    <string name="result_detail_recording_list_column_rating_label">Rating</string>
</resources>