<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        app:key="@string/SETTING_KEY_SHOW_WELCOME_SCREEN"
        app:title="@string/setting_show_welcome_screen_title"
        app:summaryOn="@string/setting_show_welcome_screen_summary_on"
        app:summaryOff="@string/setting_show_welcome_screen_summary_off"
        app:icon="@drawable/ic_setting_welcome"

        app:defaultValue="@bool/setting_show_welcome_screen_default"
        app:singleLineTitle="false"
        app:persistent="true"/>

    <EditTextPreference
        app:key="@string/SETTING_KEY_BACKUPS_NUMBER"
        app:title="@string/setting_number_of_backups_title"
        app:icon="@drawable/ic_setting_backup"

        app:useSimpleSummaryProvider="true"
        app:defaultValue="@integer/SAVE_FILE_BACKUPS_NUMBER_DEFAULT"
        app:persistent="true"/>

    <Preference
        app:key="@string/SETTING_KEY_VERSION_INFO"
        app:title="@string/setting_version_info_title"
        app:summary="@string/setting_version_info_summary"
        app:icon="@drawable/ic_setting_version" />

    <Preference
        app:key="@string/SETTING_KEY_FEEDBACK"
        app:title="@string/setting_feedback_title"
        app:summary="@string/setting_feedback_summary"
        app:icon="@drawable/ic_setting_feedback" />

    <com.petrkryze.vas.LongSummaryPreferenceCategory
        app:title="@string/setting_category_rating_labels"
        app:summary="@string/setting_category_rating_labels_summary"

        app:icon="@drawable/ic_setting_labels">

        <EditTextPreference
            app:key="@string/SETTING_KEY_RATING_TITLE_LABEL"
            app:title="@string/setting_rating_title_label_title"
            app:defaultValue="@string/rating_title_label_default"
            app:icon="@drawable/ic_setting_rating_title_label"

            app:useSimpleSummaryProvider="true"
            android:selectAllOnFocus="true"
            app:persistent="true" />

        <EditTextPreference
            app:key="@string/SETTING_KEY_RATING_LOWEST_LABEL"
            app:title="@string/setting_rating_lowest_label_title"
            app:defaultValue="@string/rating_lowest_label_default"
            app:icon="@drawable/ic_setting_lowest_label"

            app:useSimpleSummaryProvider="true"
            android:selectAllOnFocus="true"
            app:persistent="true"  />

        <EditTextPreference
            app:key="@string/SETTING_KEY_RATING_HIGHEST_LABEL"
            app:title="@string/setting_rating_highest_label_title"
            app:defaultValue="@string/rating_highest_label_default"
            app:icon="@drawable/ic_setting_highest_label"

            app:useSimpleSummaryProvider="true"
            android:selectAllOnFocus="true"
            app:persistent="true" />
    </com.petrkryze.vas.LongSummaryPreferenceCategory>

</PreferenceScreen>