<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/group_menu_primary">
        <item android:id="@+id/action_menu_new_session"
            android:title="@string/action_new_session"
            android:titleCondensed="@string/action_new_session_condensed"
            android:icon="@drawable/ic_new"
            app:showAsAction="never" />
        <item android:id="@+id/action_menu_show_saved_results"
            android:title="@string/action_show_saved_results"
            android:icon="@drawable/ic_open_folder"
            app:showAsAction="never" />
        <item android:id="@+id/action_menu_save"
            android:title="@string/action_save"
            android:icon="@drawable/ic_save"
            app:showAsAction="never" />
        <item android:id="@+id/action_menu_show_session_info"
            android:title="@string/action_show_session_info"
            android:icon="@drawable/ic_info"
            app:showAsAction="never" />
    </group>

    <group android:id="@+id/group_menu_secondary">
        <item android:id="@+id/action_menu_help"
            android:title="@string/action_help"
            android:icon="@drawable/ic_help"
            app:showAsAction="never"
            android:menuCategory="secondary"/>
        <item android:id="@+id/action_menu_settings"
            android:title="@string/action_settings"
            android:icon="@drawable/ic_settings"
            app:showAsAction="never"
            android:menuCategory="secondary"/>
        <item android:id="@+id/action_menu_quit"
            android:title="@string/action_quit"
            android:icon="@drawable/ic_exit"
            app:showAsAction="never"
            android:menuCategory="secondary"/>
    </group>
</menu>