<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/welcome_fragment_container"
    android:name="com.petrkryze.vas.fragments.WelcomeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".fragments.WelcomeFragment" >

    <ImageView
        android:id="@+id/welcome_fragment_scroll_hint_arrow"
        android:layout_width="50dp"
        android:layout_height="50dp"

        android:clickable="false"
        android:contentDescription="@string/welcome_scroll_hint_description"
        android:src="@drawable/ic_down_arrow"
        android:translationX="0dp"
        android:translationY="5dp"
        android:translationZ="15dp"

        app:tint="@color/textPrimaryOnBackground"
        android:alpha="0"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/welcome_fragment_scroll_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/welcome_fragment_title_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="20dp"
                android:elevation="0dp"
                android:maxWidth="300dp"

                android:adjustViewBounds="true"
                android:background="@color/primaryColor"
                android:contentDescription="@string/welcome_title_image_desc"
                android:src="@drawable/vas_app_welcome_icon_no_background" />

            <TextView
                android:id="@+id/welcome_title_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"

                android:text="@string/welcome_title"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline5"
                android:textStyle="bold"/>

            <include layout="@layout/horizontal_divider" />

            <TextView
                android:id="@+id/welcome_header_textview1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"

                android:text="@string/welcome_message1"/>

            <TextView
                android:id="@+id/welcome_header_textview2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"

                android:text="@string/welcome_message2"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body2"
                android:alpha="0.5"/>

            <CheckBox
                android:id="@+id/welcome_fragment_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/welcome_checkbox_do_not_show_again"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Caption"
                android:saveEnabled="false"/>

            <Button
                android:id="@+id/welcome_fragment_start_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/welcome_button_continue_label"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Button"
                android:textSize="18sp" />

            <include layout="@layout/horizontal_divider" />

            <TextView
                android:id="@+id/welcome_body_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"

                android:text="@string/welcome_message_further_info_header"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline6"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/welcome_body_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"

                android:text="@string/welcome_message_further_info"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body2" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>