<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="5dp"
    android:paddingBottom="5dp">

    <TextView
        android:id="@+id/result_detail_recording_list_row_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxEms="6"
        android:text="@string/result_detail_recording_list_row_id_placeholder"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/result_detail_recording_list_row_group"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result_detail_recording_list_row_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxEms="8"
        android:text="@string/result_detail_recording_list_row_group_placeholder"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/result_detail_recording_list_row_index"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/result_detail_recording_list_row_id"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result_detail_recording_list_row_index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:maxEms="3"
        android:minEms="3"
        android:text="@string/result_detail_recording_list_row_index_placeholder"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/result_detail_recording_list_row_rating"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/result_detail_recording_list_row_group"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result_detail_recording_list_row_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:maxEms="3"
        android:minEms="3"
        android:text="@string/result_detail_recording_list_row_rating_placeholder"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/result_detail_recording_list_row_index"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>